# school-book

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  feature_skaner_knig.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: discovery.rs  lib.rs  main.rs  server_ctl.rs  speech.rs
apps/mobile/: README.md  package.json
apps/mobile/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs  speech.rs
apps/server/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json
apps/server/src/: auth.rs  autotag.rs  db.rs  lib.rs  main.rs  mdns.rs  metadata.rs  models.rs  opds.rs
apps/web/: index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/public/fonts/: LICENSE.txt
apps/web/src/: App.svelte  app.css  main.ts
assets/dictionaries/: .gitkeep
