[package]
name = "chitalka-server"
version = "0.0.0"
description = "Библиотечный сервер читалки (Фаза 5): REST + OPDS + раздача книг с Range, SQLite-каталог"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "chitalka-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
regex = "1"
mdns-sd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Аккаунты/роли (ТЗ Часть 6): хэш паролей argon2 + JWT.
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["getrandom"] }
