[package]
name = "reader-mobile"
version = "0.0.0"
description = "Читалка для школьников — мобильное приложение"
edition = "2021"
rust-version = "1.77.2"

[lib]
# Для мобильной сборки Tauri обязателен crate-type "cdylib" (staticlib для iOS).
name = "reader_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Нативный синтез речи (системные голоса) — Фаза 1. На Android особенно нужен:
# у браузерного Web Speech в WebView часто нет голосов.
tts = "0.26"

[features]
default = []
