[package]
name = "reader-mobile"
version = "0.0.0"
description = "Читалка для школьников — мобильное приложение"
edition = "2021"
rust-version = "1.77.2"

[lib]
# Для мобильной сборки Tauri обязателен crate-type "cdylib" (staticlib для iOS).
name = "reader_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Нативный синтез речи (системные голоса) — Фаза 1.
# НЕ для Android: тамошний backend крейта `tts` в JNI_OnLoad ищет Java-класс
# `rs.tts.Bridge` (его в проекте нет) и паникует → SIGABRT при загрузке .so,
# т.е. краш на старте приложения. К тому же крейт рассчитан на NativeActivity,
# а Tauri использует WryActivity. На Android озвучка идёт через Web Speech
# (WebView проксирует в системный Android TextToSpeech).
[target.'cfg(not(target_os = "android"))'.dependencies]
tts = "0.26"

[features]
default = []

# Размер APK: debug-сборка давала .so ~180МБ на ABI (×4 ABI ≈ 700МБ). Release со
# strip + оптимизацией под размер ужимает нативную библиотеку в разы.
[profile.release]
strip = true        # убрать символы отладки (основной вклад в размер)
opt-level = "z"     # оптимизация под размер
lto = true          # межмодульная оптимизация (мельче код)
codegen-units = 1   # лучше оптимизация/размер (медленнее сборка)
panic = "abort"     # без раскрутки стека — меньше кода
